// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HtmlContentDialog /> should render the actions 1`] = `
<BasicDialog
  actions={
    [
      {
        "action": [Function],
        "label": "fooAction",
      },
    ]
  }
  title="This is the title."
>
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "<p><i>This is a html message.</i></p>",
      }
    }
  />
</BasicDialog>
`;

exports[`<HtmlContentDialog /> should render with minimal props 1`] = `
<BasicDialog
  actions={[]}
  title={null}
>
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "<p><i>This is a html message.</i></p>",
      }
    }
  />
</BasicDialog>
`;

exports[`<HtmlContentDialog /> should render with title and html message 1`] = `
<BasicDialog
  actions={[]}
  title="This is the title."
>
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "<p><i>This is a html message.</i></p>",
      }
    }
  />
</BasicDialog>
`;

exports[`<HtmlContentDialog /> should render with title, html message and messageParams 1`] = `
<BasicDialog
  actions={[]}
  title="This is the title."
>
  <div
    dangerouslySetInnerHTML={
      {
        "__html": "Message with {name}",
      }
    }
  />
</BasicDialog>
`;
